Add book dto